Добавлен Header с картинками

--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Хэдэр ))) -->
+    <header>
+      <section>
+        <a href="/">
+          <img lang="en" src="./images/Logo.svg" alt="Web Studio" />
+        </a>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Портфолио</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+
+        <ul>
+          <li>
+            <address>
+              <a href="mailto:info@devstudio.com">
+                <img
+                  src="./images/icon-mail.svg"
+                  alt="Иконка электронной почты"
+                />info@devstudio.com</a
+              >
+            </address>
+          </li>
+          <li>
+            <address>
+              <a href="tel:+38 096 111 11 11">
+                <img
+                  src="./images/icon-smartphone.svg"
+                  alt="Иконка смартфона"
+                />+38 096 111 11 11</a
+              >
+            </address>
+          </li>
+        </ul>
+      </section>
+    </header>
+  </body>
 </html>
