Валидация>исправлен контакт телефона + тег <section> заменён на тег <nav>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Хэдэр ))) -->
     <header>
-      <section>
+      <nav>
         <a href="/">
           <img lang="en" src="./images/Logo.svg" alt="Web Studio" />
         </a>
@@ -31,7 +31,7 @@
           </li>
           <li>
             <address>
-              <a href="tel:+38 096 111 11 11">
+              <a href="tel:+380961111111">
                 <img
                   src="./images/icon-smartphone.svg"
                   alt="Иконка смартфона"
@@ -40,7 +40,7 @@
             </address>
           </li>
         </ul>
-      </section>
+      </nav>
     </header>
   </body>
 </html>
