--- a/index.html
+++ b/index.html
@@ -42,5 +42,16 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <!-- Герой -->
+      <section>
+        <h1>
+          ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+          ДЛЯ ВАШЕГО БИЗНЕСА
+        </h1>
+        <a href="#">Заказать услугу</a>
+      </section>
+    </main>
+    <footer>Футер</footer>
   </body>
 </html>
