--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <a href="/">
-          <img lang="en" src="./images/Logo.svg" alt="Web Studio" />
+          <img lang="en" src="./images/logo.svg" alt="Web Studio" />
         </a>
         <ul>
           <li><a href="#">Студия</a></li>
