Добавлена секция "Преимущества компании" с картинками

--- a/index.html
+++ b/index.html
@@ -51,6 +51,46 @@
         </h1>
         <a href="#">Заказать услугу</a>
       </section>
+
+      <!-- Преимущества -->
+      <section>
+        <h2>Преимущества компании</h2>
+
+        <ul>
+          <li>
+            <img src="./images/features/antenna.svg" alt="Антенна" />
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <img src="./images/features/clock.svg" alt="Часы" />
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <img src="./images/features/diagram.svg" alt="Диграмма" />
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <img src="./images/features/astronaut.svg" alt="Астронавт" />
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>Футер</footer>
   </body>
