--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul>
           <li>
             <img src="./images/features/antenna.svg" alt="Антенна" />
-            <h3>Внимание к деталям</h3>
+            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -67,7 +67,7 @@
           </li>
           <li>
             <img src="./images/features/clock.svg" alt="Часы" />
-            <h3>Пунктуальность</h3>
+            <h3>ПУНКТУАЛЬНОСТЬ</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img src="./images/features/diagram.svg" alt="Диграмма" />
-            <h3>Планирование</h3>
+            <h3>ПЛАНИРОВАНИЕ</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -83,11 +83,36 @@
           </li>
           <li>
             <img src="./images/features/astronaut.svg" alt="Астронавт" />
-            <h3>Современные технологии</h3>
+            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Чем мы занимаемся -->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="./images/box/box1.jpg" alt="Десктопные приложения" />
+              <h3>ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/box/box2.jpg" alt="Мобильные приложения" />
+              <h3>МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/box/box3.jpg" alt="Дизайнерские решения" />
+              <h3>ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
+            </a>
           </li>
         </ul>
       </section>
