Добавлена секция "Наша команда" с фото команды и иконками соц. сетей

--- a/index.html
+++ b/index.html
@@ -116,6 +116,93 @@
           </li>
         </ul>
       </section>
+
+      <!-- Наша команда -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul lang="en">
+          <li>
+            <img src="/images/command/john.jpg" alt="John Smith photo" />
+            <h3>John Smith</h3>
+            <p>Product Designer</p>
+            <a href="#">
+              <img
+                src="./images/social-links/instagram.svg"
+                alt="Logo instagram"
+            /></a>
+
+            <a href="#">
+              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
+            /></a>
+          </li>
+          <li>
+            <img src="./images/command/marta.jpg" alt="Marta Stewart photo" />
+            <h3>Marta Stewart</h3>
+            <p>Frontend Developer</p>
+            <a href="#">
+              <img
+                src="./images/social-links/instagram.svg"
+                alt="Logo instagram"
+            /></a>
+
+            <a href="#">
+              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
+            /></a>
+          </li>
+          <li>
+            <img src="./images/command/robert.jpg" alt="Robert Jakis photo" />
+            <h3>Robert Jakis</h3>
+            <p>Marketing</p>
+            <a href="#">
+              <img
+                src="./images/social-links/instagram.svg"
+                alt="Logo instagram"
+            /></a>
+
+            <a href="#">
+              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
+            /></a>
+          </li>
+          <li>
+            <img src="./images/command/martin.jpg" alt="Martin Doe photo" />
+            <h3>Martin Doe</h3>
+            <p>UI Designer</p>
+            <a href="#">
+              <img
+                src="./images/social-links/instagram.svg"
+                alt="Logo instagram"
+            /></a>
+
+            <a href="#">
+              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
+            /></a>
+            <a href="#">
+              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
+            /></a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>Футер</footer>
   </body>
