Добавлена секция "Постоянные клиенты" с логотипами компаний

--- a/index.html
+++ b/index.html
@@ -203,6 +203,43 @@
           </li>
         </ul>
       </section>
+      <!-- Постоянные клиенты -->
+      <section>
+        <h2>Постоянные клиенты</h2>
+
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./images/clients/logo1.svg" alt="Логотип клиента 1"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/clients/logo2.svg" alt="Логотип клиента 2"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/clients/logo3.svg" alt="Логотип клиента 3"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/clients/logo4.svg" alt="Логотип клиента 4"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/clients/logo5.svg" alt="Логотип клиента 5"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./images/clients/logo6.svg" alt="Логотип клиента 6"
+            /></a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>Футер</footer>
   </body>
