--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h2>Наша команда</h2>
         <ul lang="en">
           <li>
-            <img src="/images/command/john.jpg" alt="John Smith photo" />
+            <img src="./images/command/john.jpg" alt="John Smith photo" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
             <a href="#">
