--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <header>
       <nav>
         <a href="/">
-          <img lang="en" src="./images/logo.svg" alt="Web Studio" />
+          <!-- <img lang="en" src="./images/logo.svg" alt="Web Studio" /> - Макс говорит что это текст, а не картинка, и ОН ПРАВ!-->
+          Web Studio
         </a>
         <ul>
           <li><a href="#">Студия</a></li>
@@ -118,6 +119,7 @@
       </section>
 
       <!-- Наша команда -->
+      <!-- Макс во 2м занятии сазал, что логотипы соцсетей будем делать через CSS, картинки не нужны!!! -->
       <section>
         <h2>Наша команда</h2>
         <ul lang="en">
@@ -125,81 +127,144 @@
             <img src="./images/command/john.jpg" alt="John Smith photo" />
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <a href="#">
-              <img
-                src="./images/social-links/instagram.svg"
-                alt="Logo instagram"
-            /></a>
 
-            <a href="#">
-              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/instagram.svg"
+                    alt="Logo instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/twitter.svg"
+                    alt="Logo twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/facebok.svg"
+                    alt="Logo facebok"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/linkedin.svg"
+                    alt="Logo linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./images/command/marta.jpg" alt="Marta Stewart photo" />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <a href="#">
-              <img
-                src="./images/social-links/instagram.svg"
-                alt="Logo instagram"
-            /></a>
 
-            <a href="#">
-              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/instagram.svg"
+                    alt="Logo instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/twitter.svg"
+                    alt="Logo twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/facebok.svg"
+                    alt="Logo facebok"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/linkedin.svg"
+                    alt="Logo linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./images/command/robert.jpg" alt="Robert Jakis photo" />
             <h3>Robert Jakis</h3>
-            <p>Marketing</p>
-            <a href="#">
-              <img
-                src="./images/social-links/instagram.svg"
-                alt="Logo instagram"
-            /></a>
 
-            <a href="#">
-              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/instagram.svg"
+                    alt="Logo instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/twitter.svg"
+                    alt="Logo twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/facebok.svg"
+                    alt="Logo facebok"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/linkedin.svg"
+                    alt="Logo linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./images/command/martin.jpg" alt="Martin Doe photo" />
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
-            <a href="#">
-              <img
-                src="./images/social-links/instagram.svg"
-                alt="Logo instagram"
-            /></a>
 
-            <a href="#">
-              <img src="./images/social-links/twitter.svg" alt="Logo twitter"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/facebok.svg" alt="Logo facebok"
-            /></a>
-            <a href="#">
-              <img src="./images/social-links/linkedin.svg" alt="Logo linkedin"
-            /></a>
+            <ul>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/instagram.svg"
+                    alt="Logo instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/twitter.svg"
+                    alt="Logo twitter"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/facebok.svg"
+                    alt="Logo facebok"
+                /></a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/social-links/linkedin.svg"
+                    alt="Logo linkedin"
+                /></a>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
@@ -241,6 +306,43 @@
         </ul>
       </section>
     </main>
-    <footer>Футер</footer>
+    <footer>
+      <nav>
+        <a href="/">
+          <!-- <img lang="en" src="./images/logo.svg" alt="Web Studio" /> - Макс говорит что это текст, а не картинка, и ОН ПРАВ!-->
+          Web Studio
+        </a>
+
+        <ul>
+          <li>
+            <address>
+              г. Киев, пр-т Леси Украинки, 26
+            </address>
+          </li>
+
+          <li>
+            <address>
+              <a href="mailto:info@devstudio.com">
+                <img
+                  src="./images/icon-mail.svg"
+                  alt="Иконка электронной почты"
+                />info@devstudio.com</a
+              >
+            </address>
+          </li>
+
+          <li>
+            <address>
+              <a href="tel:+380961111111">
+                <img
+                  src="./images/icon-smartphone.svg"
+                  alt="Иконка смартфона"
+                />+38 096 111 11 11</a
+              >
+            </address>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
