Добавлена ссылка гугл мап в адресе Закончен Футер

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             <ul>
               <li>
                 <a href="#">
+                  <!-- Заменить CSS -->
                   <img
                     src="./images/social-links/instagram.svg"
                     alt="Logo instagram"
@@ -245,6 +246,7 @@
               </li>
               <li>
                 <a href="#">
+                  <!-- Заменить CSS -->
                   <img
                     src="./images/social-links/twitter.svg"
                     alt="Logo twitter"
@@ -252,6 +254,7 @@
               </li>
               <li>
                 <a href="#">
+                  <!-- Заменить CSS -->
                   <img
                     src="./images/social-links/facebok.svg"
                     alt="Logo facebok"
@@ -259,9 +262,10 @@
               </li>
               <li>
                 <a href="#">
+                  <!-- Заменить CSS -->
                   <img
                     src="./images/social-links/linkedin.svg"
-                    alt="Logo linkedin"
+                    alt="Logo LinkedIn"
                 /></a>
               </li>
             </ul>
@@ -307,42 +311,89 @@
       </section>
     </main>
     <footer>
-      <nav>
-        <a href="/">
-          <!-- <img lang="en" src="./images/logo.svg" alt="Web Studio" /> - Макс говорит что это текст, а не картинка, и ОН ПРАВ!-->
-          Web Studio
-        </a>
+      <a href="/">
+        <!-- <img lang="en" src="./images/logo.svg" alt="Web Studio" /> - Макс говорит что это текст, а не картинка, и ОН ПРАВ!-->
+        Web Studio
+      </a>
 
-        <ul>
-          <li>
-            <address>
-              г. Киев, пр-т Леси Украинки, 26
-            </address>
-          </li>
+      <!-- Адресный список -->
+      <ul>
+        <li>
+          <address>
+            <a href="https://goo.gl/maps/Y7odyiGdengHAg7r9"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </address>
+        </li>
 
-          <li>
-            <address>
-              <a href="mailto:info@devstudio.com">
-                <img
-                  src="./images/icon-mail.svg"
-                  alt="Иконка электронной почты"
-                />info@devstudio.com</a
-              >
-            </address>
-          </li>
+        <li>
+          <address>
+            <a href="mailto:info@devstudio.com">
+              <!-- Заменить CSS -->
+              <img
+                src="./images/icon-mail.svg"
+                alt="Иконка электронной почты"
+              />info@devstudio.com</a
+            >
+          </address>
+        </li>
 
-          <li>
-            <address>
-              <a href="tel:+380961111111">
-                <img
-                  src="./images/icon-smartphone.svg"
-                  alt="Иконка смартфона"
-                />+38 096 111 11 11</a
-              >
-            </address>
-          </li>
-        </ul>
-      </nav>
+        <li>
+          <address>
+            <a href="tel:+380961111111">
+              <!-- Заменить CSS -->
+              <img
+                src="./images/icon-smartphone.svg"
+                alt="Иконка смартфона"
+              />+38 096 111 11 11</a
+            >
+          </address>
+        </li>
+      </ul>
+
+      <!-- Список соцсетей -->
+      <p>ПРИСОЕДИНЯЙТЕСЬ</p>
+      <ul>
+        <li>
+          <a href="#">
+            <img
+              src="./images/social-links/instagram.svg"
+              alt="Logo instagram"
+            />Instagram</a
+          >
+        </li>
+        <li>
+          <a href="#">
+            <img
+              src="./images/social-links/twitter.svg"
+              alt="Logo twitter"
+            />Twitter</a
+          >
+        </li>
+        <li>
+          <a href="#">
+            <img
+              src="./images/social-links/facebok.svg"
+              alt="Logo facebok"
+            />Facebok</a
+          >
+        </li>
+        <li>
+          <a href="#">
+            <img
+              src="./images/social-links/linkedin.svg"
+              alt="Logo linkedin"
+            />LinkedIn</a
+          >
+        </li>
+      </ul>
+
+      <p>ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+      <!-- Условие дз:Форму подписки в футере размечать не нужно. -->
+
+      <p>
+        2020 | Developed by GoIT Students
+      </p>
     </footer>
   </body>
 </html>
