Исправлен тег <adress> в футере и хедере, фото участников команды взяты в <a>

--- a/index.html
+++ b/index.html
@@ -19,28 +19,26 @@
           <li><a href="#">Контакты</a></li>
         </ul>
 
-        <ul>
-          <li>
-            <address>
+        <address>
+          <ul>
+            <li>
               <a href="mailto:info@devstudio.com">
                 <img
                   src="./images/icon-mail.svg"
                   alt="Иконка электронной почты"
                 />info@devstudio.com</a
               >
-            </address>
-          </li>
-          <li>
-            <address>
+            </li>
+            <li>
               <a href="tel:+380961111111">
                 <img
                   src="./images/icon-smartphone.svg"
                   alt="Иконка смартфона"
                 />+38 096 111 11 11</a
               >
-            </address>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </address>
       </nav>
     </header>
     <main>
@@ -124,7 +122,9 @@
         <h2>Наша команда</h2>
         <ul lang="en">
           <li>
-            <img src="./images/command/john.jpg" alt="John Smith photo" />
+            <a href="#"
+              ><img src="./images/command/john.jpg" alt="John Smith photo"
+            /></a>
             <h3>John Smith</h3>
             <p>Product Designer</p>
 
@@ -160,7 +160,9 @@
             </ul>
           </li>
           <li>
-            <img src="./images/command/marta.jpg" alt="Marta Stewart photo" />
+            <a href="#"
+              ><img src="./images/command/marta.jpg" alt="Marta Stewart photo"
+            /></a>
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
 
@@ -196,7 +198,9 @@
             </ul>
           </li>
           <li>
-            <img src="./images/command/robert.jpg" alt="Robert Jakis photo" />
+            <a href="#">
+              <img src="./images/command/robert.jpg" alt="Robert Jakis photo" />
+            </a>
             <h3>Robert Jakis</h3>
 
             <ul>
@@ -231,7 +235,9 @@
             </ul>
           </li>
           <li>
-            <img src="./images/command/martin.jpg" alt="Martin Doe photo" />
+            <a href="#"
+              ><img src="./images/command/martin.jpg" alt="Martin Doe photo"
+            /></a>
             <h3>Martin Doe</h3>
             <p>UI Designer</p>
 
@@ -317,17 +323,16 @@
       </a>
 
       <!-- Адресный список -->
-      <ul>
-        <li>
-          <address>
+
+      <address>
+        <ul>
+          <li>
             <a href="https://goo.gl/maps/Y7odyiGdengHAg7r9"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
-          </address>
-        </li>
+          </li>
 
-        <li>
-          <address>
+          <li>
             <a href="mailto:info@devstudio.com">
               <!-- Заменить CSS -->
               <img
@@ -335,11 +340,9 @@
                 alt="Иконка электронной почты"
               />info@devstudio.com</a
             >
-          </address>
-        </li>
+          </li>
 
-        <li>
-          <address>
+          <li>
             <a href="tel:+380961111111">
               <!-- Заменить CSS -->
               <img
@@ -347,9 +350,9 @@
                 alt="Иконка смартфона"
               />+38 096 111 11 11</a
             >
-          </address>
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </address>
 
       <!-- Список соцсетей -->
       <p>ПРИСОЕДИНЯЙТЕСЬ</p>
